crates/weaver-app/src/components/editor/snapshots/weaver_app__components__editor__tests__blockquote.snap
---
source: crates/weaver-app/src/components/editor/tests.rs
expression: result
---
- byte_range:
    - 41
    - 18
  char_range:
    - 0
    - 18
  html: "<blockquote><p id=\"p-0-n0\"><span class=\"md-syntax-block\" data-syn-id=\"s0\" data-char-start=\"0\" data-char-end=\"1\">&gt;</span> This is a quote\n</p>"
  offset_map:
    - byte_range:
        - 2
        - 2
      char_range:
        - 0
        - 0
      node_id: p-0-n0
      char_offset_in_node: 0
      child_index: 0
      utf16_len: 0
    - byte_range:
        - 0
        - 1
      char_range:
        - 0
        - 1
      node_id: p-0-n0
      char_offset_in_node: 0
      child_index: ~
      utf16_len: 1
    - byte_range:
        - 1
        - 2
      char_range:
        - 1
        - 2
      node_id: p-0-n0
      char_offset_in_node: 1
      child_index: ~
      utf16_len: 1
    - byte_range:
        - 2
        - 17
      char_range:
        - 2
        - 17
      node_id: p-0-n0
      char_offset_in_node: 2
      child_index: ~
      utf16_len: 15
    - byte_range:
        - 17
        - 18
      char_range:
        - 17
        - 18
      node_id: p-0-n0
      char_offset_in_node: 17
      child_index: ~
      utf16_len: 1
  source_hash: 11268153476336590706
- byte_range:
    - 22
    - 41
  char_range:
    - 22
    - 41
  html: "<span id=\"p-1-n0\" class=\"md-syntax-block\" data-syn-id=\"s1\" data-char-start=\"18\" data-char-end=\"22\">&gt;\n&gt; </span></span><p id=\"p-1-n1\" dir=\"ltr\">With multiple lines</p>"
  offset_map:
    - byte_range:
        - 18
        - 22
      char_range:
        - 18
        - 22
      node_id: p-1-n0
      char_offset_in_node: 0
      child_index: ~
      utf16_len: 4
    - byte_range:
        - 22
        - 22
      char_range:
        - 22
        - 22
      node_id: p-1-n1
      char_offset_in_node: 0
      child_index: 0
      utf16_len: 0
    - byte_range:
        - 22
        - 41
      char_range:
        - 22
        - 41
      node_id: p-1-n1
      char_offset_in_node: 0
      child_index: ~
      utf16_len: 19
  source_hash: 765233770142737875
