crates/weaver-app/src/components/editor/snapshots/weaver_app__components__editor__tests__bold.snap
---
source: crates/weaver-app/src/components/editor/tests.rs
expression: result
---
- byte_range:
    - 0
    - 18
  char_range:
    - 0
    - 18
  html: "<p id=\"p-0-n0\" dir=\"ltr\">Some <span class=\"md-syntax-inline\" data-syn-id=\"s0\" data-char-start=\"5\" data-char-end=\"7\">**</span><strong>bold</strong><span class=\"md-syntax-inline\" data-syn-id=\"s1\" data-char-start=\"11\" data-char-end=\"13\">**</span> text</p>\n"
  offset_map:
    - byte_range:
        - 0
        - 0
      char_range:
        - 0
        - 0
      node_id: p-0-n0
      char_offset_in_node: 0
      child_index: 0
      utf16_len: 0
    - byte_range:
        - 0
        - 5
      char_range:
        - 0
        - 5
      node_id: p-0-n0
      char_offset_in_node: 0
      child_index: ~
      utf16_len: 5
    - byte_range:
        - 5
        - 7
      char_range:
        - 5
        - 7
      node_id: p-0-n0
      char_offset_in_node: 5
      child_index: ~
      utf16_len: 2
    - byte_range:
        - 7
        - 11
      char_range:
        - 7
        - 11
      node_id: p-0-n0
      char_offset_in_node: 7
      child_index: ~
      utf16_len: 4
    - byte_range:
        - 11
        - 13
      char_range:
        - 11
        - 13
      node_id: p-0-n0
      char_offset_in_node: 11
      child_index: ~
      utf16_len: 2
    - byte_range:
        - 13
        - 18
      char_range:
        - 13
        - 18
      node_id: p-0-n0
      char_offset_in_node: 13
      child_index: ~
      utf16_len: 5
  source_hash: 3007541947422346271
