crates/weaver-app/src/components/editor/snapshots/weaver_app__components__editor__tests__empty_document.snap
---
source: crates/weaver-app/src/components/editor/tests.rs
expression: result
---
- byte_range:
    - 0
    - 0
  char_range:
    - 0
    - 0
  html: "<span id=\"n0\">​</span>"
  offset_map: []
  source_hash: 0
