crates/weaver-app/src/components/editor/snapshots/weaver_app__components__editor__tests__hard_break.snap
---
source: crates/weaver-app/src/components/editor/tests.rs
expression: result
---
- byte_range:
    - 0
    - 19
  char_range:
    - 0
    - 19
  html: "<p id=\"n0\">Line one<span class=\"md-placeholder\" data-syn-id=\"s0\" data-char-start=\"8\" data-char-end=\"10\">  </span><br /> Line two</p>\n"
  offset_map:
    - byte_range:
        - 0
        - 0
      char_range:
        - 0
        - 0
      node_id: n0
      char_offset_in_node: 0
      child_index: 0
      utf16_len: 0
    - byte_range:
        - 0
        - 8
      char_range:
        - 0
        - 8
      node_id: n0
      char_offset_in_node: 0
      child_index: ~
      utf16_len: 8
    - byte_range:
        - 8
        - 10
      char_range:
        - 8
        - 10
      node_id: n0
      char_offset_in_node: 8
      child_index: ~
      utf16_len: 2
    - byte_range:
        - 10
        - 11
      char_range:
        - 10
        - 11
      node_id: n0
      char_offset_in_node: 10
      child_index: ~
      utf16_len: 1
    - byte_range:
        - 11
        - 19
      char_range:
        - 11
        - 19
      node_id: n0
      char_offset_in_node: 11
      child_index: ~
      utf16_len: 8
  source_hash: 11960038156086585782
