crates/weaver-app/src/components/editor/snapshots/weaver_app__components__editor__tests__heading_h1.snap
---
source: crates/weaver-app/src/components/editor/tests.rs
expression: result
---
- byte_range:
    - 0
    - 11
  char_range:
    - 0
    - 11
  html: "<h1 data-node-id=\"n0\"><span class=\"md-syntax-block\"># </span>Heading 1</h1>\n"
  offset_map:
    - byte_range:
        - 0
        - 0
      char_range:
        - 0
        - 0
      node_id: n0
      char_offset_in_node: 0
      child_index: 0
      utf16_len: 0
    - byte_range:
        - 0
        - 2
      char_range:
        - 0
        - 2
      node_id: n0
      char_offset_in_node: 0
      child_index: ~
      utf16_len: 2
    - byte_range:
        - 2
        - 11
      char_range:
        - 2
        - 11
      node_id: n0
      char_offset_in_node: 2
      child_index: ~
      utf16_len: 9
  source_hash: 17388718256970297689
