crates/weaver-app/src/components/editor/snapshots/weaver_app__components__editor__tests__mixed_unicode_ascii.snap
---
source: crates/weaver-app/src/components/editor/tests.rs
expression: result
---
- byte_range:
    - 0
    - 23
  char_range:
    - 0
    - 16
  html: "<p id=\"n0\">Hello 你好 world 🎉</p>\n"
  offset_map:
    - byte_range:
        - 0
        - 0
      char_range:
        - 0
        - 0
      node_id: n0
      char_offset_in_node: 0
      child_index: 0
      utf16_len: 0
    - byte_range:
        - 0
        - 23
      char_range:
        - 0
        - 16
      node_id: n0
      char_offset_in_node: 0
      child_index: ~
      utf16_len: 17
  source_hash: 3781751019085848984
